--- a/src/app/users/user-profile/user-profile.component.html
+++ b/src/app/users/user-profile/user-profile.component.html
@@ -55,21 +55,23 @@
         <div class="tab-pane active" id="home">
           <hr>
           <div *ngIf="updated" class="alert alert-success">
-              <strong>Success!</strong> Profile has been updated
+            <strong>Success!</strong> Profile has been updated</div>
           <form class="row form" #profileForm="ngForm" (ngSubmit)="updateProfile(profileForm)" id="profileForm">
             <input type="hidden" class="form-control" name="$key" #$key="ngModel" [(ngModel)]="user.$key" />
             <div class="form-group col-sm-6">
               <label for="fullName">
                 <h4>Full name</h4>
               </label>
-              <input type="text" class="form-control" name="fullName" #fullName="ngModel" [(ngModel)]="user.fullName" placeholder="Please enter your full name" title="Please enter your full name" />
+              <input type="text" class="form-control" name="fullName" #fullName="ngModel" [(ngModel)]="user.fullName"
+                placeholder="Please enter your full name" title="Please enter your full name" />
             </div>
 
             <div class="form-group col-sm-6">
               <label for="phone">
                 <h4>Phone</h4>
               </label>
-              <input type="text" class="form-control" name="phone" #phone="ngModel" [(ngModel)]="user.phone" id="phone" placeholder="enter phone" title="enter your phone number if any.">
+              <input type="text" class="form-control" name="phone" #phone="ngModel" [(ngModel)]="user.phone" id="phone"
+                placeholder="enter phone" title="enter your phone number if any.">
             </div>
 
             <div class="form-group col-sm-6">
@@ -82,8 +84,8 @@
               <label for="email">
                 <h4>Email</h4>
               </label>
-              <input type="email" class="form-control" value="{{user.email}}" name="email" id="email" disabled placeholder="you@email.com"
-                title="enter your email.">
+              <input type="email" class="form-control" value="{{user.email}}" name="email" id="email" disabled
+                placeholder="you@email.com" title="enter your email.">
             </div>
             <div class="form-group col-sm-6">
               <label for="email">
