--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
 
 <!-- <app-main-nav></app-main-nav> -->
 
-<ng4-loading-spinner [threshold]="10" [timeout]="20000" [zIndex]="9999"></ng4-loading-spinner>
+<ng4-loading-spinner [threshold]="10" [timeout]="99999999" [zIndex]="9999"></ng4-loading-spinner>
 
 <router-outlet></router-outlet>
 <footer class="footer">
