--- a/src/app/companies/company-jobs/company-jobs.component.html
+++ b/src/app/companies/company-jobs/company-jobs.component.html
@@ -1,3 +1,40 @@
-<p>
-  company-jobs works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <h2><a id="logo" routerLink="/home">Seekers</a></h2>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link btn btn-outline-secondary" routerLink="/company/profile">Profile</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link btn btn-outline-secondary" routerLink="/company/jobs">My Jobs</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <button class="btn btn-outline-danger my-2 my-sm-0" (click)="logout()">Logout</button>
+    </form>
+  </div>
+</nav>
+
+<div class="container">
+  <table class="table table-striped table-dark">
+    <thead>
+      <tr>
+        <th scope="col">Title</th>
+        <th scope="col">Job Type</th>
+        <th scope="col">Salary</th>
+      </tr>
+    </thead>
+    <tbody *ngFor="let item of companyJobs">
+      <tr>
+        <td>{{item.title}}</td>
+        <td>{{item.type}}</td>
+        <td>{{item.salary}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
