--- a/src/app/users/user-profile/user-profile.component.html
+++ b/src/app/users/user-profile/user-profile.component.html
@@ -28,7 +28,8 @@
     <div class="col-sm-3">
       <!--left col-->
       <div class="text-center">
-        <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail" alt="avatar">
+        <img *ngIf="user.photo == null" src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail" alt="avatar">
+        <img *ngIf="user.photo != null" src="{{user.photo}}" class="avatar img-circle img-thumbnail" alt="avatar">
         <h6>Upload a different photo...</h6>
         <input type="file" class="text-center center-block file-upload">
       </div>
